@@ -1,6 +1,7 @@
 Revision history for Getopt-Long
 
 {{$NEXT}}
+    - Reject values failing argument constraints
 
 0.1.5  2020-02-23T18:27:21+01:00
     - Add compat-builtin option
